# appmarket-simple

./: .gitignore  README.md
ansible/: Makefile  ansible.cfg  site.yml
ansible/appmarket-server/tasks/: install.yml  main.yml  service.yml
src/: Gemfile  config.ru
src/app2/: README.md  pyproject.toml
src/app2/app2/: __main__.py  bulk.py  checksum.py  cli.py  config.py  manifest.py  marketplace.py  matching.py  patch.py  release.py  s3.py  validate.py
src/app2/tests/: test_bulk.py  test_config.py  test_manifest.py  test_matching.py  test_patch.py  test_validate.py
src/controllers/: appmarket-server.rb
src/lib/: appliance.rb
src/lib/appliance/: image.rb
src/models/: appliances.rb
src/public/: logos
src/public/css/: market.css  styles.css
src/public/js/: bundle.js  index.html
src/public/react/: .babelrc  .env  .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.js  webpack.dev.config.js
src/public/react/assets/: index.html
src/public/react/assets/scss/: catalog.scss  footer.scss  header.scss  main.scss  product.scss
src/public/react/public/: index.html
src/public/react/src/: App.css  App.jsx  App.tsx  index.css  index.js  main.jsx  main.tsx  routes.js
src/public/react/src/actions/: index.js
src/public/react/src/config/: config.community.json  config.opennebula.json
src/public/react/src/constants/: defaultprops.js  endpoints.js  index.js  literals.js  utils.js  (+1 more)
src/views/: appliance.haml  banner.haml  index.haml  layout!.haml  layout.haml  react.haml
(+197 files in other folders)
