[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app2"
version = "0.0.1"
description = "OpenNebula marketplace appliance management CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "ruamel.yaml>=0.18",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
app2 = "app2.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
